--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,10 @@ body {
 
 }
 
+a {
+  text-decoration: none;
+}
+
 /* LAYOUT */
 .main-layout {
   max-width: 1280px;
@@ -33,6 +37,14 @@ body {
 
 .logo {
   margin-left: 123px;
+  line-height: 82px;
+
+}
+
+.logo img {
+  object-fit: cover;
+  height: 20px;
+
 }
 
 ul li:last-child {
@@ -54,7 +66,11 @@ canvas {
 }
 
 .flex {
-  display: flex;
+  display: flex !important;
+}
+
+.space-between {
+  justify-content: space-between;
 }
 
 .space-between {
@@ -76,16 +92,26 @@ canvas {
   margin: 0 auto;
   height: 70vh;
   overflow-y: scroll;
+  border: 5px solid white;
+  margin-top: 10px;
 }
 
 .gallery-main {
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 10px;
-  margin-top: 10px;
 
+  grid-auto-flow: row;
+  padding: 10px;
+  /* align-items: stretch; */
 }
 
 .gallery-main img {
   width: 100%;
+  border: 4px solid rgb(133, 115, 115);
+  border-radius: 20px;
+}
+
+.working-space {
+  display: none
 }
