--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,11 @@ a {
   text-decoration: none;
 }
 
+button,
+img {
+  cursor: pointer;
+}
+
 /* LAYOUT */
 .main-layout {
   max-width: 1280px;
@@ -111,8 +116,7 @@ input[name="filter"] {
 
 canvas {
   background-color: rgb(180, 106, 106);
-
-
+  border: 5px solid black;
 }
 
 .controller-content {
@@ -206,4 +210,10 @@ button:active {
 
 .flex.column {
   flex-direction: column;
+}
+
+
+/* ANIMATIONS */
+.animate__animated.animate__bounce {
+  --animate-duration: 2s;
 }
