--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,14 @@ a {
 }
 
 button,
-img {
+img,
+a {
   cursor: pointer;
+}
+
+input[type="text"] {
+  font-size: 30px;
+  font-family: Poppins;
 }
 
 /* LAYOUT */
@@ -52,7 +58,7 @@ img {
 
 }
 
-ul li:last-child {
+.header-list li:last-child {
   margin-right: 247px;
   margin-left: 63px;
 }
@@ -86,10 +92,9 @@ ul li:last-child {
 }
 
 input[name="filter"] {
-  background-image: url('../icons/search-icon.png');
-  background-color: #22252c;
+  background: url('../icons/search-icon.png') no-repeat right center;
   color: #fefefe;
-  padding: 20px;
+  padding: 10px;
   padding-left: 30px;
   background-size: 40px;
   width: 40%;
@@ -99,8 +104,45 @@ input[name="filter"] {
 
 .gallery-main img {
   width: 100%;
+  max-width: 500px;
   border: 4px solid rgb(133, 115, 115);
   border-radius: 20px;
+}
+
+.search-line {
+  margin-top: 20px;
+}
+
+.key-words {
+  box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.15);
+  border-radius: 38px;
+  background-color: #fefefe;
+  opacity: 0.4;
+  line-height: 58px;
+  padding: 10px;
+
+}
+
+.ul-words {
+  display: flex;
+  justify-content: space-around;
+}
+
+.ul-words li:not(:last-child) {
+  margin-right: 20px;
+
+}
+
+.more-keys {
+  width: 92px;
+  /* height: 36px; */
+  box-shadow: 0 3px 6px 1px rgba(0, 0, 0, 0.15);
+  background-color: #fefefe;
+  background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
+  border-radius: 18px;
+  font-family: Poppins;
+  font-size: 18px;
+  color: #fefefe;
 }
 
 /* Working Space */
@@ -120,7 +162,6 @@ canvas {
 }
 
 .controller-content {
-
   flex-direction: column;
   margin-right: 20px;
   margin: 0 auto;
@@ -182,6 +223,16 @@ button:active {
   .controller-content {
     margin-right: 20px;
   }
+
+  .search-line {
+    flex-direction: column;
+
+  }
+
+  .logo {
+    margin: 0 auto;
+
+  }
 }
 
 
@@ -198,8 +249,8 @@ button:active {
   justify-content: space-between;
 }
 
-.space-between {
-  justify-content: space-between;
+.space-around {
+  justify-content: space-around;
 }
 
 .clean-list {
@@ -216,4 +267,19 @@ button:active {
 /* ANIMATIONS */
 .animate__animated.animate__bounce {
   --animate-duration: 2s;
+}
+
+/* SCROLL-BAR */
+.gallery-container::-webkit-scrollbar {
+  width: 1em;
+}
+
+.gallery-container::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+.gallery-container::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
+  border-radius: 20px;
+  /* outline: 1px solid slategrey; */
 }
