--- a/css/styles.css
+++ b/css/styles.css
@@ -196,12 +196,18 @@ canvas {
 @media (min-width:880px) {
   .controller-content {
     margin: 0 auto;
+
   }
+}
+
+.controller-content .line-buttons {
+  margin-bottom: 8px;
 }
 
 .controller-content input {
   width: 70%;
   margin: 0 auto;
+  margin-bottom: 5px;
   height: 10%;
   border-radius: 20px;
   background-color: #ebeef3;
@@ -325,7 +331,6 @@ button:active {
 .gallery-container::-webkit-scrollbar-thumb {
   background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
   border-radius: 20px;
-  /* outline: 1px solid slategrey; */
 }
 
 
@@ -389,4 +394,111 @@ button:active {
   .toggle-menu-btn {
     display: block;
   }
+}
+
+
+/* MODAL */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal Content */
+.modal-content {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  border: 1px solid #888;
+  width: 80%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  animation-name: animatetop;
+  animation-duration: 0.4s
+}
+
+@keyframes animatetop {
+  from {
+    top: -300px;
+    opacity: 0
+  }
+
+  to {
+    top: 0;
+    opacity: 1
+  }
+}
+
+.close {
+  color: white;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-header {
+  padding: 2px 16px;
+  background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
+  color: white;
+}
+
+.modal-body {
+  padding: 2px 16px;
+}
+
+.modal-footer {
+  padding: 2px 16px;
+  background-image: linear-gradient(-86deg, #33be6d 0%, #0c98b9 100%);
+  color: white;
+}
+
+.social-buttons {
+  justify-content: space-between;
+  width: 220px;
+  margin-bottom: 80px;
+  flex-wrap: wrap;
+}
+
+.social-buttons button {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+
+}
+
+.social-buttons button img {
+  width: 100%;
+  line-height: 40px;
+  text-align: center;
+}
+
+.fc-btn:hover {
+  background-color: blue;
+}
+
+.tw-btn:hover {
+  background-color: rgb(155, 155, 240);
+}
+
+.be-btn:hover {
+  background-color: rgb(197, 91, 197);
+}
+
+.bs-btn:hover {
+  background-color: rgb(61, 228, 83);
 }
